Added default perm size setting fo jacoco integration test plugin and documented usage in README